--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     command:
       - "--api.insecure=true"
       - "--providers.docker=true"
-      - "--entrypoints.web.address=:8082"  # Changed to avoid conflict
+      - "--entrypoints.web.address=:8085"  # Changed to avoid conflict
     ports:
-      - "8082:80"  # Changed to avoid conflict
-      - "8081:8080"  # Changed to avoid conflict
+      - "8085:80"  # Changed to avoid conflict
+      - "8086:8080"  # Changed to avoid conflict
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     networks:
@@ -36,7 +36,7 @@ services:
     volumes:
       - wp_data:/var/www/html
     ports:
-      - 8083:80  # Changed to avoid conflict
+      - "8087:80"  # Changed to avoid conflict
     environment:
       - WORDPRESS_DB_HOST=db
       - WORDPRESS_DB_USER=wordpress
@@ -52,9 +52,9 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.docker.lbswarm=true"
-        - "traefik.docker.network=tabletap"
+        - "traefik.docker.network=greenbeauty_network"
         - "traefik.http.routers.landing.rule=Host(`https://www.greenbeautycenter.fr`)"
-        - "traefik.http.services.landing.loadbalancer.server.port=8083"
+        - "traefik.http.services.landing.loadbalancer.server.port=8087"
     networks:
       - greenbeauty_network
 
