--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,17 @@ services:
     command:
       - "--api.insecure=true"
       - "--providers.docker=true"
-      - "--entrypoints.web.address=:8085"  # Changed to avoid conflict
+      - "--entrypoints.web.address=:8085"
+      - "--entrypoints.websecure.address=:8443"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
     ports:
-      - "8085:80"  # Changed to avoid conflict
-      - "8086:8080"  # Changed to avoid conflict
+      - "8085:80"
+      - "8086:8080"
+      - "8443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "letsencrypt:/letsencrypt"
     networks:
       - greenbeauty_network
 
@@ -27,7 +32,6 @@ services:
       - MYSQL_PASSWORD=wordpress
     expose:
       - 3306
-      - 33060
     networks:
       - greenbeauty_network
 
@@ -35,8 +39,6 @@ services:
     image: wordpress:latest
     volumes:
       - wp_data:/var/www/html
-    ports:
-      - "8087:80"  # Changed to avoid conflict
     environment:
       - WORDPRESS_DB_HOST=db
       - WORDPRESS_DB_USER=wordpress
@@ -51,10 +53,10 @@ services:
         delay: 10s
       labels:
         - "traefik.enable=true"
-        - "traefik.docker.lbswarm=true"
-        - "traefik.docker.network=greenbeauty_network"
-        - "traefik.http.routers.landing.rule=Host(`greenbeautycenter.fr`)"
-        - "traefik.http.services.landing.loadbalancer.server.port=8087"
+        - "traefik.http.routers.wordpress.rule=Host(`greenbeautycenter.fr`)"
+        - "traefik.http.routers.wordpress.entrypoints=websecure"
+        - "traefik.http.routers.wordpress.tls.certresolver=myresolver"
+        - "traefik.http.services.wordpress.loadbalancer.server.port=80"
     networks:
       - greenbeauty_network
 
@@ -65,3 +67,4 @@ volumes:
 
 networks:
   greenbeauty_network:
+    external: true
