--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     image: wordpress:latest
     volumes:
       - wp_data:/var/www/html
+    ports:
+      - "8087:80"
     environment:
       - WORDPRESS_DB_HOST=db
       - WORDPRESS_DB_USER=wordpress
@@ -46,8 +48,8 @@ services:
         delay: 10s
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.wordpress.rule=Host(`greenbeautycenter.fr`)"
-        - "traefik.http.services.wordpress.loadbalancer.server.port=80"
+        - "traefik.http.routers.greenbeautycenter_wordpress.rule=Host(`greenbeautycenter.fr`)"
+        - "traefik.http.services.greenbeautycenter_wordpress.loadbalancer.server.port=80"
     networks:
       - greenbeauty_network
 
@@ -57,4 +59,5 @@ volumes:
 
 networks:
   greenbeauty_network:
+    driver: overlay
     external: true
