--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 
 services:
-  traefik:
+  greenbeautycenter_traefik:
     image: traefik:v3.0
     command:
       - "--api.insecure=true"
@@ -14,6 +14,10 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     networks:
       - greenbeauty_network
+    deploy:
+      placement:
+        constraints:
+          - node.role == manager
 
   db:
     image: mariadb:10.6.4-focal
