--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 
 services:
-  greenbeautycenter_traefik:
+  traefik:
     image: traefik:v3.0
     command:
       - "--api.insecure=true"
@@ -15,6 +15,8 @@ services:
     networks:
       - greenbeauty_network
     deploy:
+      mode: replicated
+      replicas: 1
       placement:
         constraints:
           - node.role == manager
@@ -52,7 +54,7 @@ services:
         delay: 10s
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.greenbeautycenter_wordpress.rule=Host(`greenbeautycenter.fr`)"
+        - "traefik.http.routers.greenbeautycenter_wordpress.rule=Host(`www.greenbeautycenter.fr`)"
         - "traefik.http.services.greenbeautycenter_wordpress.loadbalancer.server.port=80"
     networks:
       - greenbeauty_network
