--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,8 @@ services:
     container_name: mariadb
     environment:
       MYSQL_ROOT_PASSWORD: 123
+    ports:
+      - "8080:80"
     networks:
       - traefik_network
     volumes:
